--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,17 @@
     }
   },
   "rules": {
+    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+    "no-param-reassign": [
+      2,
+      {
+        "props": false
+      }
+    ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"],
     "default-param-last": 0,
     "react/jsx-filename-extension": [
       2,
